# unsloth

rsmf/: Cargo.toml
rsmf/crates/rsmf-core/: Cargo.toml
rsmf/crates/rsmf-core/src/: coherence.rs  config.rs  error.rs  lib.rs  stratum.rs  tensor.rs
rsmf/crates/rsmf-distributed/: Cargo.toml
rsmf/crates/rsmf-distributed/src/: budget.rs  lib.rs  model_config.rs  shard.rs  topology.rs
rsmf/crates/rsmf-layers/: Cargo.toml
rsmf/crates/rsmf-layers/src/: activation_cache.rs  forward.rs  lib.rs  model.rs
rsmf/crates/rsmf-moe/: Cargo.toml
rsmf/crates/rsmf-moe/src/: expert.rs  hierarchical_coherence.rs  lib.rs  moe_model.rs  routing.rs
rsmf/crates/rsmf-resonance/: Cargo.toml
rsmf/crates/rsmf-resonance/src/: backward_channel.rs  corrector.rs  coupling.rs  lib.rs  local_update.rs  symplectic.rs
rsmf/crates/rsmf-train/: Cargo.toml
rsmf/crates/rsmf-train/src/: lib.rs  loss.rs  schedule.rs  trainer.rs
scripts/: scan_packages_baseline.json
studio/backend/core/export/: export.py
studio/backend/core/training/: trainer.py  worker.py
studio/backend/models/: training.py
studio/frontend/: package-lock.json  package.json
studio/frontend/src/app/: router.tsx
studio/frontend/src/app/routes/: rsmf.tsx
studio/frontend/src/components/: app-sidebar.tsx
studio/frontend/src/config/: training.ts
studio/frontend/src/features/export/: constants.ts
studio/frontend/src/features/onboarding/components/steps/: model-selection-step.tsx
studio/frontend/src/features/rsmf/: RsmfPage.tsx
studio/frontend/src/features/rsmf/api/: rsmf.ts
studio/frontend/src/features/rsmf/components/: RsmfControlPanel.tsx  StratumVisualizer.tsx
studio/frontend/src/features/rsmf/stores/: rsmf-store.ts
studio/frontend/src/features/studio/sections/: model-section.tsx
studio/frontend/src/features/training/api/: mappers.ts
studio/frontend/src/features/training/lib/: training-methods.ts
studio/frontend/src/features/training/stores/: training-config-store.ts
studio/frontend/src/features/training/types/: api.ts  config.ts
studio/frontend/src/i18n/locales/: en.ts
studio/frontend/src/types/: training.ts
studio/src-tauri/: Cargo.toml
studio/src-tauri/src/: main.rs  rsmf_commands.rs
unsloth/kernels/moe/grouped_gemm/: interface.py
