[package]
name = "rsmf-core"
version.workspace = true
edition.workspace = true
description = "Core types: stratified weight geometry, resonant tensors, spectral config"

[dependencies]
ndarray = { workspace = true }
num-traits = { workspace = true }
half = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
