[package]
name = "rsmf-distributed"
version.workspace = true
edition.workspace = true
description = "Distributed stratum sharding and pipeline parallelism for 100B-700B RSMF training"

[dependencies]
rsmf-core = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
crossbeam = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
