[package]
name = "rsmf-layers"
version.workspace = true
edition.workspace = true
description = "Layer abstractions: forward pass with stratified recording, activation caching"

[dependencies]
rsmf-core = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
half = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
