[package]
name = "rsmf-moe"
version.workspace = true
edition.workspace = true
description = "MoE expert-aware stratification with shared routing stratum for RSMF"

[dependencies]
rsmf-core = { workspace = true }
rsmf-distributed = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
