[package]
name = "rsmf-resonance"
version.workspace = true
edition.workspace = true
description = "Resonance operators: local update Ω, backward channel Φ, inter-stratum coupling Γ"

[dependencies]
rsmf-core = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
