[package]
name = "rsmf-train"
version.workspace = true
edition.workspace = true
description = "RSMF training loop: memory-safe layer cycling, coherence checks, full-parameter updates"

[dependencies]
rsmf-core = { workspace = true }
rsmf-layers = { workspace = true }
rsmf-resonance = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
criterion = { workspace = true }
